--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -149,7 +149,7 @@
             </div>
             <div class="media-body">
                 <h4 class="media-heading card-body">{{ event.title }}</h4>
-                <p class="card-body">
+                <p class="card-body col-xs-12">
                     <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>{{ event.duration }} min.
                     <i class="fa fa-ticket fa-fw" aria-hidden="true"></i>Aventura
                     <i class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+
