--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -162,9 +162,8 @@
                     <span id="inputSuccess3Status" class="sr-only">(success)</span>
                 </div>
                 <div id="shop-crc-div" class="form-group has-feedback col-xs-3">
-                    <label for="pwd">CVV<a data-toggle="tooltip" title="CVV: dígitos de seguridad en la parte posterior de tu tarjeta de débito/crédito"<i style="padding-left:5px"class="fa fa-question-circle" aria-hidden="true"></i></label></a>
-                    <input name="shop-crc" type="text" min="100" max="999" class="form-control" id="shop-crc" aria-describedby="inputSuccess4Status" required onchange="cardcheck(4, self)">
-                    <span id="shop-crc-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                    <label>CVV<a data-toggle="tooltip" title="CVV: dígitos de seguridad en la parte posterior de tu tarjeta de débito/crédito"<i style="padding-left:5px"class="fa fa-question-circle" aria-hidden="true"></i></label></a>
+                    <input name="shop-crc" type="text" min="100" max="999" class="form-control" id="shop-crc" required onchange="cardcheck(4, self)">
                     <span id="inputSuccess4Status" class="sr-only">(success)</span>
                 </div>
                 <div class="col-xs-12" style="padding-top:20px;padding-bottom:20px;">
