--- a/entradas_com/app/templates/event/event.html
+++ b/entradas_com/app/templates/event/event.html
@@ -98,7 +98,7 @@
             <h4>
                 <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>{{ event.duration }}
                 <i style="margin-left:50px"class="fa fa-ticket fa-fw" aria-hidden="true"></i>Aventura
-                <i style="margin-left:50px"class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>{{ event.omdb_imdbRating }}
+                <i style="margin-left:50px" class="fa fa-star fa-fw" aria-hidden="true"></i>{{ event.omdb_imdbRating }}
             </h4>
             <hr>
             <a id="purchase-button" class="col-xs-12" data-scroll href="#buy-pls">Comprar entradas</a>
