--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -137,13 +137,13 @@
 
     <div class="container">
     {% if events %}
-    
+
     {% for event in events  %}
 
     <div class="col-sm-12 col-md-6 card" tabindex="-1">
         <div class="media">
             <div class="media-left">
-                <a href="#">
+                <a href="{{ url_for('event.event', id=event.id) }}">
                     <img class="media-object card-img" src="http://img.omdbapi.com/?i={{ event.imdb }}&apikey=b7845ea1" alt="#">
                 </a>
             </div>
