--- a/entradas_com/app/templates/shop/shop.html
+++ b/entradas_com/app/templates/shop/shop.html
@@ -132,7 +132,7 @@
                     <h4>información adicional</h4>
                     <h3><strong>TOTAL:</strong></h3>
                 </div>
-                
+
             </div>
             <div class="col-xs-12 col-sm-8">
                 <h2>Tarjeta de débito o crédito</h2>
@@ -177,7 +177,7 @@
                 <h2>PayPal</h2>
                 <hr>
                 <div  style="text-align:center">
-                    <a href="#"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" alt="Check out with PayPal"/></a>
+                    <a href="https://paypal.me/danimedinag/30"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" alt="Check out with PayPal"/></a>
                     <img style="width:230px;margin-top:20px;"src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/cc-badges-ppppcmcvdam.png" alt="Pay with PayPal, PayPal Credit or any major credit card" />
                 </div>
             </div>
@@ -228,11 +228,6 @@
     <!-- own JavaScript -->
     <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
     <script src="{{ url_for('static', filename='js/shop.js') }}"></script>
-    <script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip(); 
-    });
-    </script>
 </body>
 
 </html>
