--- a/entradas_com/app/templates/auth/login-signup.html
+++ b/entradas_com/app/templates/auth/login-signup.html
@@ -98,7 +98,7 @@
                     <form action="{{ url_for('main.signup') }}" type="signup" id="signup-form" class="signup-field" role="form" method="post" name="Signup">
                         <div id="sign-mail-div" class="form-group has-feedback">
                             <label for="email">Email:</label>
-                            <input id="sign-mail" name="email "type="email" class="form-control" id="email" onchange="validate(0, this.id)" aria-describedby="inputSuccessStatus" required>
+                            <input id="sign-mail" name="email" type="email" class="form-control" id="email" onchange="validate(0, this.id)" aria-describedby="inputSuccessStatus" required>
                             <span id="sign-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             <span id="inputSuccessStatus" class="sr-only">(success)</span>
                         </div>
@@ -116,7 +116,7 @@
                         </div>
                         <div id="sign-pwd-confirm-div" class="form-group has-feedback">
                             <label for="pwd-confirm">Confirmar contraseña:</label>
-                            <input id="sign-pwd-confirm" name="password" type="password" class="form-control" id="pwd-confirm" onchange="validate(3, this.id)" aria-describedby="inputSuccess3Status" required>
+                            <input id="sign-pwd-confirm" name="sdfasdf" type="password" class="form-control" id="pwd-confirm" onchange="validate(3, this.id)" aria-describedby="inputSuccess3Status" required>
                             <span id="sign-pwd-confirm-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             <span id="inputSuccess3Status" class="sr-only">(success)</span>
                         </div>
